# backend/docs/swagger.yaml
@@ -217,15 +217,9 @@ paths:
       summary: Авторизация пользователя
       tags:
       - auth
-  /schedule/{group}:
+  /majors:
     get:
-      description: Возвращает найденные ФИО преподавателей
-      parameters:
-      - description: Фамилия преподавателя
-        in: query
-        name: lecturer
-        required: true
-        type: string
+      description: Возвращает список направлений
       produces:
       - application/json
       responses:
@@ -237,23 +231,47 @@ paths:
                 type: string
               type: array
             type: array
+      summary: Список направлений
+      tags:
+      - major
+  /schedule/{group}:
+    get:
+      description: Возвращает расписание для указанной группы на выбранный день.
+      parameters:
+      - description: ID Группы (число)
+        in: path
+        name: group
+        required: true
+        type: integer
+      - description: 'Дата расписания (формат: YYYY.MM.DD)'
+        in: query
+        name: day
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Успешный ответ
+          schema:
+            items:
+              $ref: '#/definitions/models.Schedule'
+            type: array
         "400":
-          description: '{"code": 2} - Пустой параметр lecturer'
+          description: '{"code": 1} - Невалидный ID группы'
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
-        "404":
-          description: '{"code": 1} - Не найдены ФИО преподавателей'
+        "500":
+          description: '{"code": 1} - ошибка парсинга ответа API, {"code": 2} - ошибка
+            Redis'
           schema:
-            additionalProperties:
-              type: integer
-            type: object
+            $ref: '#/definitions/handlers.ErrorResponse'
         "503":
-          description: '{"code": 1} - Недоступность API Расписания'
+          description: '{"code": 1} - Недоступность API Расписания, {"code": 2} -
+            недоступность\таймаут Redis'
           schema:
-            additionalProperties:
-              type: integer
-            type: object
-      summary: Имена преподавателей
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: Расписание на конкретный день
       tags:
       - schedule
   /schedule/{group}/today:
@@ -291,6 +309,45 @@ paths:
       summary: Расписание на сегодня
       tags:
       - schedule
+  /search:
+    get:
+      description: Возвращает найденные ФИО преподавателей
+      parameters:
+      - description: Фамилия преподавателя
+        in: query
+        name: lecturer
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Успешный ответ
+          schema:
+            items:
+              items:
+                type: string
+              type: array
+            type: array
+        "400":
+          description: '{"code": 2} - Пустой параметр lecturer'
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "404":
+          description: '{"code": 1} - Не найдены ФИО преподавателей'
+          schema:
+            additionalProperties:
+              type: integer
+            type: object
+        "503":
+          description: '{"code": 1} - Недоступность API Расписания'
+          schema:
+            additionalProperties:
+              type: integer
+            type: object
+      summary: Имена преподавателей
+      tags:
+      - search
 securityDefinitions:
   BearerAuth:
     description: 'Вставьте токен в формате: Bearer {ваш_токен}'
