# backend/internal/routes/major.go
@@ -1,0 +1,11 @@
+package routes
+
+import (
+	"miu-guide/internal/handlers"
+
+	"github.com/labstack/echo/v5"
+)
+
+func InitMajorRoutes(e *echo.Echo) {
+	e.GET("/majors", handlers.GetMajors)
+}
